--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,59 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
 }
-
+.flex-row{
+  display: flex;
+  justify-content: space-between;
+}
+.compon-1{
+  height: 100vh;
+  border: 2px solid rgb(217, 222, 237);
+  width: 50%;
+  padding-top: 30px;
+  
+}
+.bg-div{
+  width: 149px;
+  height: 100px;
+  margin-top: 20px;
+}
+.form-top{
+  margin-top: 40px;
+}
+.comp2{
+  padding-top: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+.dot-1 {
+  height: 25px;
+  width: 25px;
+  background-color: #4b4be5;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot-2 {
+  height: 25px;
+  width: 25px;
+  background-color: #ffa500;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot-3 {
+  height: 25px;
+  width: 25px;
+  background-color: #ee82ee;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot-4 {
+  height: 25px;
+  width: 25px;
+  background-color: #3cb371;
+  border-radius: 50%;
+  display: inline-block;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
